--- a/web/src/app/cars/car-row/car-row.component.html
+++ b/web/src/app/cars/car-row/car-row.component.html
@@ -1,13 +1,16 @@
 <h3>{{ car.make }} {{ car.model }} {{ car.year }}</h3>
 <div>
-  <span>Id: </span>{{car.id}}
+  <span>Id: </span>{{ car.id }}
 </div>
 <div>
-  <span>Number of Miles: </span>{{  car.numofmiles  }}
+  <span>Miles: </span>{{ car.miles }}
 </div>
 <div>
-  <span>Number of Seats: </span>{{  car.numofseats  }}
+  <span>Number of Seats: </span>{{ car.seats }}
 </div>
 <div>
-  <span>Category: </span>{{car.category}}
+  <span>Category: </span>{{ car.category }}
+</div>
+<div>
+  <span>Price: $</span>{{ car.price }}
 </div>
